# ig_crawler

./: .gitignore  Cargo.toml  README.md  locust.py  test.py
src/: config.rs  csrf_token.rs  fetch.rs  handler.rs  main.rs  utils.rs
src/_struct/: count.rs  mod.rs  pk.rs
src/fetch/: mod.rs  pk.rs  user_data.rs
