[package]
name = "ig_follower_crawl"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.0", features = ["full"] }
serde =  { version =  "1.0.219" , features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0.141"
regex = "1.11.1"
anyhow = "1.0.98"
once_cell = "1.21.3"
